--- a/src/redirect.html
+++ b/src/redirect.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<title>Redirect Page</title>
-	</head>
-	<body>
-		<p>This is the redirect page.</p>
-	</body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Redirect Page - Open Source Pal</title>
+    </head>
+    <body>
+        <p>This is the redirect page.</p>
+    </body>
 </html>
